tests/baselines/reference/arraySigChecking.errors.txt
tests/cases/compiler/arraySigChecking.ts(11,17): error TS1023: An index signature parameter type must be 'string' or 'number'.
tests/cases/compiler/arraySigChecking.ts(18,5): error TS2322: Type '无值[]' is not assignable to type '文字[]'.
  Type '无值' is not assignable to type '文字'.
tests/cases/compiler/arraySigChecking.ts(22,1): error TS2322: Type '数字[][]' is not assignable to type '数字[][][]'.
  Type '数字[]' is not assignable to type '数字[][]'.
    Type '数字' is not assignable to type '数字[]'.


==== tests/cases/compiler/arraySigChecking.ts (3 errors) ====
    declare module M {
        interface iBar { t: any; }
        interface iFoo extends iBar {
            s: any;
        }
    
        class cFoo {
            t: any;
        }
    
        var foo: { [index: any]; }; // expect an error here
                    ~~~~~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }
    
    interface myInt {
        voidFn(): void;
    }
    var myVar: myInt;
    var strArray: string[] = [myVar.voidFn()];
        ~~~~~~~~
!!! error TS2322: Type '无值[]' is not assignable to type '文字[]'.
!!! error TS2322:   Type '无值' is not assignable to type '文字'.
    
    
    var myArray: number[][][];
    myArray = [[1, 2]];
    ~~~~~~~
!!! error TS2322: Type '数字[][]' is not assignable to type '数字[][][]'.
!!! error TS2322:   Type '数字[]' is not assignable to type '数字[][]'.
!!! error TS2322:     Type '数字' is not assignable to type '数字[]'.
    
    function isEmpty(l: { length: number }) {
        return l.length === 0;
    }
    
    isEmpty([]);
    isEmpty(new Array(3));
    isEmpty(new Array<string>(3));
    isEmpty(['a']);
    